src/objects/Developer__c.object
<CustomObject>
    <fields>
        <fullName>CV__c</fullName>
        <label>CV</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hours_per_week__c</fullName>
        <label>Hours per week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <label>Social</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Developer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Hours_per_week__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Developers_less_than_20_hours_a_week</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Hours_per_week__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Hours_per_week__c</field>
            <operation>lessThan</operation>
            <value>30</value>
        </filters>
        <label>Developers less than 20 hours a week</label>
    </listViews>
    <listViews>
        <fullName>Developers_more_than_20_hours_a_week</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Hours_per_week__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hours_per_week__c</field>
            <operation>greaterOrEqual</operation>
            <value>30</value>
        </filters>
        <label>Developers more than 30 hours a week</label>
    </listViews>
    <nameField>
        <label>Developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>check_Hours_per_week</fullName>
        <active>true</active>
        <errorConditionFormula>Hours_per_week__c &gt;168</errorConditionFormula>
        <errorDisplayField>Hours_per_week__c</errorDisplayField>
        <errorMessage>Hours per week can&apos;t more 168</errorMessage>
    </validationRules>
</CustomObject>